Fixed help icon rendering on firefox

--- a/assets/styles/cwrc.css
+++ b/assets/styles/cwrc.css
@@ -85,16 +85,18 @@
     vertical-align: middle;
     margin: 0 0.25em;
 
+    width: 1em;
+    height: 1em;
+
     box-shadow: 0.05em 0.05em 0.12em #aaaaff;
     border: 1px solid #0000ff;
     border-radius: 100%;
 
-    width: 1em;
-    height: 1em;
+    padding: 0.1em;
 
     text-align: center;
 
-    font-style: italic;
+    font-family: "Courier New", monospace;
     font-size: 1.5em;
     color: #0000ff;
     content: '?';
